--- a/Aequus Engine/Aequus Engine.vcxproj
+++ b/Aequus Engine/Aequus Engine.vcxproj
@@ -19,8 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{9FB63754-9453-432A-AF43-81C065AAE764}</ProjectGuid>
-    <RootNamespace>Aequus_Engine</RootNamespace>
+    <ProjectGuid>{361F6AA2-CB05-479D-9E3B-344E5EE4550A}</ProjectGuid>
+    <RootNamespace>AequusEngine</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -68,8 +68,18 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>C:\Program Files %28x86%29\Microsoft Visual Studio 14.0\SDL\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files %28x86%29\Microsoft Visual Studio 14.0\SDL\x64;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <ClCompile>
+      <WarningLevel>Level3</WarningLevel>
+      <Optimization>Disabled</Optimization>
+      <SDLCheck>true</SDLCheck>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
@@ -78,14 +88,8 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SubSystem>Console</SubSystem>
     </Link>
-  </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
-      <Optimization>Disabled</Optimization>
-      <SDLCheck>true</SDLCheck>
-    </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -114,23 +118,30 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Aequus Files\Aequus Core.cpp" />
-    <ClCompile Include="Conscientia Files\Concero.cpp" />
-    <ClCompile Include="Conscientia Files\Conscientia.cpp" />
-    <ClCompile Include="Conscientia Files\Logging.cpp" />
-    <ClCompile Include="Core.cpp" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="Aequus Files\Aequus Core.h" />
     <ClInclude Include="Aequus Files\Aequus Headers.h" />
+    <ClInclude Include="Aequus Files\SDL Headers.h" />
+    <ClInclude Include="Aequus Files\Windows.h" />
     <ClInclude Include="Conscientia Files\Concero.h" />
     <ClInclude Include="Conscientia Files\Conscientia Headers.h" />
     <ClInclude Include="Conscientia Files\Conscientia.h" />
     <ClInclude Include="Conscientia Files\Logging.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Aequus Files\Aequus Core.cpp" />
+    <ClCompile Include="Aequus Files\Windows.cpp" />
+    <ClCompile Include="Conscientia Files\Concero.cpp" />
+    <ClCompile Include="Conscientia Files\Conscientia.cpp" />
+    <ClCompile Include="Conscientia Files\Logging.cpp" />
+    <ClCompile Include="Core.cpp" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="Conscientia Files\GetPage.py" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Log.log" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets" />
+  <ImportGroup Label="ExtensionTargets">
+  </ImportGroup>
 </Project>
