Linked graphical windows to Aequus namespace and added ease of use funcitons for texture addition/management

--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,5 @@ ModelManifest.xml
 .fake/
 /Aequus Engine/OpenSans
 /Aequus Engine/AlegreyaSans
+/Aequus Engine/AlegreyaSansSC
+/Aequus Engine/PressStart2P
